# cham

./: README.md
android/chamapi/: CMakeLists.txt  build.gradle
android/chamapi/src/androidTest/java/cham/koliber/ir/chamui/: ExampleInstrumentedTest_1.java
android/chamapi/src/main/: AndroidManifest_1.xml
android/chamapi/src/main/java/cham/koliber/ir/chamui/ChaMUI/ChaMBase/: ChaMActivity_2.java  ChaMAdapter_1.java  ChaMAlert_3.java  ChaMDialog_2.java  ChaMFragment_3.java
android/chamapi/src/main/java/cham/koliber/ir/chamui/ChaMUI/ChaMCore/: ChaMCoreAPI.java  ChaMHttp_2.java  ChaMNativeInterface_1.java  ChaMPool.java
android/chamapi/src/main/java/cham/koliber/ir/chamui/ChaMUI/ChaMUI/: ChaMAppBarLayout.java  (+21 more)
android/chamapi/src/main/jni/: chamnativeapi.c
android/chamapi/src/main/jni/ChaM/ChaM/: caster_1.c  interface.c  media_1.c  protocol_1.c  stream.c
android/chamapi/src/main/jni/ChaM/ChaM/utils/dsa/: karray.c  klist.c  kmap_1.c  kson_1.c
android/chamapi/src/main/jni/ChaM/ChaM/utils/ipc/: kmsg_1.c  ksem.c
android/chamapi/src/main/jni/ChaM/ChaM/utils/net/: ktcp_1.c  kudp_1.c
android/chamapi/src/main/jni/ChaM/ChaM/utils/tools/: kmemory.c  kprocessor.c
android/chamapi/src/main/jni/ChaM/include/: caster_1.h  interface.h  media_1.h  protocol.h  stream.h  utils.h
android/chamapi/src/main/jni/ChaM/libs/include/: sqlite3_1.h
android/chamapi/src/main/res/layout/: cham_adapterprogress.xml  cham_fab.xml  cham_recyclerview.xml  cham_spinnerdropitem.xml  cham_spinneritem_1.xml
android/chamapi/src/main/res/values/: attrs_1.xml  colors_1.xml  strings_1.xml  styles_1.xml
android/chamapi/src/test/java/cham/koliber/ir/chamui/: ExampleUnitTest_1.java
stream/: .gitignore  CMakeLists.txt
stream/include/klb/dsa/: karray.h  klinkedlist.h  kmap.h  kson.h
stream/include/klb/ipc/: kmsg.h  ksem.h  kshm.h
stream/include/klb/net/: kpipe.h  kprocessor.h  ktcp.h  kudp.h
stream/src/: cham_stream_node.c  cham_stream_node.h  cham_util.c  cham_util.h
(+199 files in other folders)
